apps/pihole-01/k8s.dhcprelay.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: dhcphelper
  name: dhcphelper
  namespace: dns
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: dhcphelper
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dhcphelper
    spec:
      containers:
        - name: dhcphelper
          image: homeall/dhcphelper:latest@sha256:abdced956057d1d2ec86712d09ba7842c64ccdf7f56825bf38ac4b16beac288c
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          resources:
            limits:
              cpu: 100m
              memory: 32Mi
            requests:
              cpu: 100m
              memory: 32Mi
      hostNetwork: true
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - pihole
              topologyKey: "kubernetes.io/hostname"
  strategy:
    type: Recreate
