apps/pihole-01/k8s.nebula-sync.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nebula-sync
  namespace: dns
  labels:
    app: nebula-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nebula-sync
  template:
    metadata:
      labels:
        app: nebula-sync
    spec:
      containers:
      - name: nebula-sync
        image: ghcr.io/lovelaze/nebula-sync:v0.11.2
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            #cpu: "200m"
